# clipmap

./: .gitignore  Cargo.toml  Info.plist  README.md  config.json  install_macos.sh  macos.plist  mappings.json  release_macos.sh  windows.ps1
clipmap/clipmap.xcodeproj/: project.pbxproj
src/: main.rs
