[package]
name = "clipmap"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
strip = true       # strip debug symbols → tiny binary
lto = true         # link-time optimization
codegen-units = 1  # max optimization