[package]
name = "clipmap"
version = "0.2.0"
edition = "2024"

[dependencies]
arboard     = "3"
dirs        = "5"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
notify-rust = "4"
ureq        = "3"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"

[profile.release]
opt-level     = 3
strip         = true
lto           = true
codegen-units = 1
